# week4

./: .goosehints  <!-- Added Tool-Assisted Simulation -->.md  IMPLEMENTATION_TIMELINE.md  PROJECT_RULES.md  PROJECT_STRUCTURE.md  README.md  READMELAmb.md  full_adder.asc  full_adder_test.asc  half_adder.asc  half_adder_test.asc  pixi.toml  readme  types-of-geese.md  v1.md  v18  v18.md  v2.md  v3.md  week4micro.code-workspace
@/: cla_4bit.v
code/src/microarch/: CMakeLists.txt  LICENSE
code/src/microarch/docs/: ## C Language Syntax.md
code/src/microarch/docs/language_comparisons/: transition-strategies.md
code/src/microarch/docs/language_guides/: debugging-strategies.md  error-handling-and-safety.md  security-best-practices.md  type-conversions.md
code/src/microarch/docs/mojo_examples/: Mojo Memory Analysis Script Design Principles.md  README.md
code/src/microarch/docs/optimization_techniques/: memory-management-strategies.md  system-interactions.md
code/src/microarch/docs/overview/: foundational-concepts.md  integrated-circuit-design.md
code/src/microarch/docs/resources/: git_commands.md  security.md
code/src/microarch/homework/week2/worksheets/: hw2_start.md
code/src/microarch/labs/c_language/src/: memory_operations.c  pipeline_visualizer.c
code/src/microarch/labs/lab2/overview/: lab2_extra_guide.md
code/src/microarch/presentations/: L1_CourseOverviewPart1.pptx  L2_GatesAndSimulatorPart1.pptx
code/src/microarch/requirements/vscode/: mojo-requirements.txt
code/src/microarch/resources/interactive_simulators/: output-architecture-sim.yaml
(+607 files in other folders)
